added some new changes

--- a/src/index.html
+++ b/src/index.html
@@ -14,21 +14,21 @@
   </head>
   <body class="page__body">
     <header class="header page__header">
-      <div class="container header__container">
-        <div class="header__content">
-          <a href="#menu" class="header__icon icon icon--menu"></a>
+      <div class="header__content">
 
-          <div class="header__block">
-            <div class="header__image">
-              <a href="#" class="header__logo"></a>
-            </div>
+        <div class="header__block">
+          <div class="header__image">
+            <a href="#" class="header__logo"></a>
+          </div>
+          <div class="header__icon">
+            <a href="#menu" class="icon icon--menu"></a>
           </div>
 
-          <div class="art-museum">
+          <div class="art-museum header__art-museum">
             <h1 class="art-museum__title">Художній музей</h1>
 
             <a href="#events" class="art-museum__button">
-              <p class="art-museum__text">Квитки</p>
+              <div class="art-museum__text">Квитки</div>
 
               <div class="button button--first-type"></div>
             </a>
@@ -36,10 +36,11 @@
             <div class="art-museum__detail">
               <div class="art-museum__line"></div>
 
-              <p class="art-museum__detail-text">Події</p>
+              <div class="art-museum__detail-text">події</div>
             </div>
           </div>
         </div>
+
       </div>
     </header>
 
@@ -100,7 +101,7 @@
       <div class="container">
         <h2 class="page__section-title">Актуальні події</h2>
 
-        <div class="events events--gap">
+        <div class="page__events events events--gap">
           <div class="grid grid--phone">
             <div class="grid__item grid__item--tablet-1-6 grid__item--desktop-1-7">
               <div class="events__photo">
@@ -179,29 +180,37 @@
         <div class="gallery">
           <div class="gallery__content">
             <div class="gallery__photo">
-              <img
-                src="./images/photos/image_1.png"
-                alt="image 1"
-                class="gallery__image"
-              >
+              <div class="gallery__photo-block">
+                <img
+                  src="./images/photos/image_1.png"
+                  alt="image 1"
+                  class="gallery__image"
+                >
+              </div>
 
-              <img
-                src="./images/photos/image_2.png"
-                alt="image 2"
-                class="gallery__image"
-              >
+              <div class="gallery__photo-block">
+                <img
+                  src="./images/photos/image_2.png"
+                  alt="image 2"
+                  class="gallery__image"
+                >
+              </div>
 
-              <img
-                src="./images/photos/image_3.png"
-                alt="image 3"
-                class="gallery__image gallery__image--size"
-              >
+              <div class="gallery__photo-block">
+                <img
+                  src="./images/photos/image_3.png"
+                  alt="image 3"
+                  class="gallery__image gallery__image--size"
+                >
+              </div>
 
-              <img
-                src="./images/photos/image_4.png"
-                alt="image 4"
-                class="gallery__image gallery__image--size"
-              >
+              <div class="gallery__photo-block">
+                <img
+                  src="./images/photos/image_4.png"
+                  alt="image 4"
+                  class="gallery__image gallery__image--size"
+                >
+              </div>
             </div>
 
             <div class="gallery__navigation">
@@ -242,7 +251,7 @@
       </div>
     </div>
 
-    <footer class="footer" id="contacts">
+    <footer class="page__footer footer" id="contacts">
       <div class="container">
         <div class="footer__content">
           <div class="footer__main">
@@ -250,12 +259,14 @@
               <div class="footer__logo">
                 <a href="#" class="footer__image"></a>
               </div>
+
               <div class="footer__share">
                 <a
                   href="https://www.facebook.com/namu.museum/?locale=ru_RU"
                   class="footer__facebook"
                   target="_blank"
                 ></a>
+
                 <a
                   href="https://www.instagram.com/namu.museum/"
                   class="footer__instagram"
