--- a/src/index.html
+++ b/src/index.html
@@ -164,9 +164,9 @@
         <div class="container">
           <h2 class="section__title">Галерея</h2>
           <div class="galary__content grid grid--desktop">
-            <div class="grid__item grid__item--desktop-1-4">
+            <div class="galary__image-wrapper galary__image-wrapper--active grid__item grid__item--desktop-1-4">
               <picture>
-                <source media="(max-width: 1170px)" srcset="./images/photo/galary_1-tabl.jpg" >
+                <source media="(max-width: 1280px)" srcset="./images/photo/galary_1-tabl.jpg" >
                 <img
                   class="galary__image"
                   src="./images/photo/galary_1.jpg"
@@ -174,9 +174,9 @@
                 >
               </picture>
             </div>
-            <div class="grid__item grid__item--desktop-5-12">
+            <div class="galary__image-wrapper grid__item grid__item--desktop-5-12">
               <picture>
-                <source media="(max-width: 1170px)" srcset="./images/photo/galary_2-tabl.jpg">
+                <source media="(max-width: 1280px)" srcset="./images/photo/galary_2-tabl.jpg">
                 <img
                   class="galary__image"
                   src="./images/photo/galary_2.jpg"
@@ -184,9 +184,9 @@
                 >
               </picture>
             </div>
-            <div class="grid__item grid__item--desktop-1-8">
+            <div class="galary__image-wrapper grid__item grid__item--desktop-1-8">
               <picture>
-                <source media="(max-width: 1170px)" srcset="./images/photo/galary_1-tabl.jpg">
+                <source media="(max-width: 1280px)" srcset="./images/photo/galary_1-tabl.jpg">
                 <img
                   class="galary__image"
                   src="./images/photo/galary_3.jpg"
@@ -194,9 +194,9 @@
                 >
               </picture>
             </div>
-            <div class="grid__item grid__item--desktop-9-12">
+            <div class="galary__image-wrapper grid__item grid__item--desktop-9-12">
               <picture>
-                <source media="(max-width: 1170px)" srcset="./images/photo/galary_2-tabl.jpg">
+                <source media="(max-width: 1280px)" srcset="./images/photo/galary_2-tabl.jpg">
                 <img
                   class="galary__image"
                   src="./images/photo/galary_4.jpg"
