--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,293 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Namu</title>
+    <link rel="icon" href="./images/NaMU.svg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
-  </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
     <script type="text/javascript" src="scripts/main.js"></script>
+  </head>
+  <body class="page__body">
+    <header class="page__header header">
+      <div class="container container--header">
+        <div class="header__nav">
+
+          <a href="#menu" class="icon icon--menu"></a>
+
+          <a href="#" class="logo">
+            <img class="logo__image" src="images/NAMU-logo.svg" alt="NAMU">
+          </a>
+        </div>
+
+        <h1 class="header__title">
+          ХУДОЖНІЙ <br> МУЗЕЙ
+        </h1>
+
+        <a href="#" class="header__link link">
+          <div class="link__title">КВИТКИ</div>
+          <div class="link__button link__button--white">
+            <img src="./images/arrow.svg" alt="arrow icon">
+          </div>
+        </a>
+
+        <div class="header__decor">
+          <span class="header__decor-text">ПОДІЇ</span>
+          <div class="header__line"></div>
+        </div>
+      </div>
+    </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="menu__container">
+        <div class="container">
+          <div class="menu__content">
+            <div class="menu__top">
+              <a href="#" class="icon icon--cross"></a>
+              <div class="menu__useful-links">
+                <div class="menu__links-container">
+                  <a href="#gallery" class="menu__nav-link">Галерея</a>
+                  <a href="#events" class="menu__nav-link">Виставки та<br>події</a>
+                </div>
+                <div class="menu__links-container">
+                  <a href="#subscribe" class="menu__nav-link">Про Нас</a>
+                  <a href="#contacts" class="menu__nav-link">Контакти</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="menu__timetable">
+              <div class="menu__wrapper">
+                <p class="menu__title">Графік роботи</p>
+                <ul class="menu__open-hours">
+                  <li class="menu__time"><strong>12:00 — 20:00</strong> середа</li>
+                  <li class="menu__time"><strong>12:00 — 20:00</strong> четвер</li>
+                  <li class="menu__time"><strong>12:00 — 20:00</strong> пʼятниця</li>
+                  <li class="menu__time"><strong>11:00 — 19:00</strong> субота</li>
+                  <li class="menu__time"><strong>11:00 — 19:00</strong> неділя</li>
+                </ul>
+              </div>
+              <p class="menu__days-off">
+                <strong>Вихідні:</strong> понеділок, вівторок<br>
+                Каса припиняє роботу за 1 годину <br>
+                до закриття музею
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <main class="main">
+      <section class="section events" id="events">
+        <div class="container">
+          <h2 class="section__title">
+            Актуальні події
+          </h2>
+
+          <ul class="events__list">
+            <li class="events__item">
+              <img src="./images/photo1.jpg" alt="Landscape" class="events__image">
+              <div class="events__content">
+                <div class="events__top">
+                  <span class="events__type">
+                    Виставка
+                  </span>
+                  <span class="events__date">
+                    26.08-29.11.2019
+                  </span>
+                </div>
+                <p class="events__name">
+                  Йду і повертаюсь
+                </p>
+                <p class="events__description">
+                  Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське
+                  мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </li>
+            <li class="events__item">
+              <img src="./images/phot2.jpg" alt="Woman and bird" class="events__image">
+              <div class="events__content">
+                <div class="events__top">
+                  <span class="events__type">
+                    Виставка
+                  </span>
+                  <span class="events__date">
+                    26.08-29.11.2019
+                  </span>
+                </div>
+                <p class="events__name">
+                  І спогади і мрії
+                </p>
+                <p class="events__description">
+                  Національний художній музей України до 100 річчя від дня народження видатної української художниці
+                  Тетяни Яблонської відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
+
+        <div class="events__higlited">
+          <div class="events__image-container">
+            <img src="./images/photo3.jpg" alt="sunset picture" class="events__image events__image--full-screen">
+          </div>
+          <div class="container">
+            <div class="lection">
+              <div class="lection__container">
+                <div class="events__top events__top--highlighted-event">
+                  <span class="events__type">
+                    Лекція
+                  </span>
+                  <span class="events__date events--date-spe">
+                    26/08/2019 - 11:00
+                  </span>
+                </div>
+              </div>
+
+              <p class="events__name events__name--highlighted-event">
+                Від класицизму до<br>романтизму
+              </p>
+            </div>
+          </div>
+        </div>
+
+
+      </section>
+
+      <section class="section gallery" id="gallery">
+        <div class="container">
+          <h2 class="section__title">
+            Галерея
+          </h2>
+          <div class="gallery__content">
+            <div class="gallery__images">
+              <div class="gallery__top-images">
+                <img src="./images/gallery1.jpg" alt="painting 1" class="gallery__image">
+
+                <img src="./images/gallery2.jpg" alt="painting 2" class="gallery__image">
+              </div>
+
+              <div class=" gallery__bottom-images">
+                <img src="./images/gallery3.jpg" alt="painting 3" class="gallery__image">
+
+                <img src="./images/gallery4.jpg" alt="painting 2" class="gallery__image">
+              </div>
+            </div>
+
+            <div class="gallery__dots">
+              <a href="#" class="gallery__dot"></a>
+              <a href="#" class="gallery__dot"></a>
+              <a href="#" class="gallery__dot"></a>
+              <a href="#" class="gallery__dot"></a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="section follow" id="subscribe">
+
+        <div class="container">
+          <div class="follow__content">
+            <h2 class="section__title section__title--follow">
+              Підписка
+            </h2>
+            <p class="follow__description">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+            <form class="follow__form">
+              <label for="subscribe">
+                <input 
+                type="email" 
+                name="email" 
+                class="follow__input" 
+                placeholder="E-mail" 
+                required
+              >
+              </label>
+              
+              <button type="submit" class="follow__button">
+                <img src="./images/arrow.svg" alt="arrow icon">
+              </button>
+            </form>
+          </div>
+        </div>
+
+      </section>
+    </main>
+
+    <footer class="page__footer footer">
+      <div class="container">
+        <div class="footer__main">
+          <div class="footer__top">
+            <a href="#" class="logo">
+              <img class="logo__image" src="images/NAMU-logo.svg" alt="NAMU">
+            </a>
+
+            <div class="footer__social">
+              <a href="https://www.facebook.com/namu.museum/?locale=uk_UA" class="icon icon--facebook" target="_blank">
+                <img src="./images/facebook-logo.svg" alt="icon facebook">
+              </a>
+              <a href="https://instagram.com/namu.museum?igshid=YmMyMTA2M2Y=" class="icon icon--instagram"
+                target="_blank">
+                <img src="./images/instagram.svg" alt="icon instagram">
+              </a>
+            </div>
+          </div>
+
+          <div class="footer__main-box">
+            <div class="footer__content">
+              <div class="footer__timetable">
+                <p class="footer__title">Графік роботи</p>
+                <ul class="footer__open-hours">
+                  <li class="footer__time"><strong>12:00 — 20:00</strong> <span class="footer__day">середа</span></li>
+                  <li class="footer__time"><strong>12:00 — 20:00</strong> <span class="footer__day">четвер</span></li>
+                  <li class="footer__time"><strong>12:00 — 20:00</strong> <span class="footer__day">пʼятниця</span></li>
+                  <li class="footer__time"><strong>11:00 — 19:00</strong> <span class="footer__day">субота</span></li>
+                  <li class="footer__time"><strong>11:00 — 19:00</strong> <span class="footer__day">неділя</span></li>
+                </ul>
+                <p class="footer__days-off">
+                  Вихідні понеділок, вівторок<br>
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </p>
+              </div>
+
+              <div class="footer__contacts" id="contacts">
+                <p class="footer__title">Контакти:</p>
+                <a href="https://goo.gl/maps/hMTiMdUgK9kp8bka6" class="footer__contact" target="_blank">
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a><br>
+                <a href="tel:+38 (044) 278-13-57" class="footer__contact">тел. +38 (044) 278-13-57</a><br>
+                <a href="fax:+38 (044) 278-74-54" class="footer__contact">факс +38 (044) 278-74-54</a><br>
+                <a href="mailto:info@namu.kyiv.ua" class="footer__contact">e-mail: info@namu.kyiv.ua</a>
+              </div>
+            </div>
+
+            <div class="footer__useful-links">
+              <div class="footer__links-container">
+                <a href="#gallery" class="footer__nav-link">Галерея</a>
+                <a href="#events" class="footer__nav-link">Виставки та події</a>
+              </div>
+              <div class="footer__links-container">
+                <a href="#subscribe" class="footer__nav-link">Підписка</a>
+                <a href="#contacts" class="footer__nav-link">Контакти</a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <div class="footer__author">
+          <p class="footer__authors">Designed by Zhyriada Marina</p>
+          <p class="footer__authors">Copyright © 2019. All Rights Reserved.</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
