--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <h1 class="header__title">
-          ХУДОЖНІЙ <br> МУЗЕЙ
+          ХУДОЖНІЙ <br> МУЗЕ
         </h1>
 
         <a href="#" class="header__link link">
