--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&display=swap"
       rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <script src="scripts/main.js" defer></script>
   </head>
   <body class="page__body">
     <header class="page__header header">
@@ -26,7 +26,7 @@
         </div>
 
         <h1 class="header__title">
-          ХУДОЖНІЙ <br> МУЗЕ
+          ХУДОЖНІЙ <br> МУЗЕЙ
         </h1>
 
         <a href="#" class="header__link link">
@@ -201,7 +201,7 @@
             <p class="follow__description">
               Бути в курсі всіх актуальних подій та останніх новин.
             </p>
-            <form class="follow__form">
+            <form method="get" class="follow__form">
               <label for="subscribe">
                 <input 
                 type="email" 
