--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,495 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+
+  <body class="page__body">
+    <header class="header page__header">
+      <div class="container">
+        <a href="#menu" class="header__burger"></a>
+
+        <div class="grid">
+          <div class="
+            grid__item--mobile-1-2
+            grid__item--tablet-4-5
+            grid__item--desktop-6-7"
+          >
+            <div class="logo__container">
+              <a href="#" class="header__logo logo">
+                na <br> mu
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="header__background"></div>
+
+        <div class="grid">
+          <div class="
+            grid__item--mobile-1-2
+            grid__item--tablet-1-3
+            grid__item--desktop-1-5"
+          >
+            <h1 class="header__headline">художній <br> музей</h1>
+          </div>
+
+          <div class="
+            grid__item--mobile-1-2
+            grid__item--tablet-1-3
+            grid__item--desktop-3-5"
+          >
+            <div class="header__button button">
+              <a class="button__text" href="#tickets">квитки</a>
+              <a class="button__press"  href="#tickets"></a>
+            </div>
+          </div>
+
+          <a class="header__2events" href="#events">події</a>
+        </div>
+      </div>
+    </header>
+
+    <nav class="menu page__menu" id="menu">
+      <div class="container">
+        <a href="#" class="menu__cross"></a>
+
+        <div class="grid">
+          <div class="
+            grid__item--mobile-1-1
+            grid__item--tablet-1-1
+            grid__item--desktop-1-2"
+          >
+            <a href="#galery" class="menu__link menu__links">Галерея</a>
+            <a href="#galery" class="menu__link menu__links">Виставки та події</a>
+          </div>
+
+          <div class="
+            grid__item--mobile-2-2
+            grid__item--tablet-2-2
+            grid__item--desktop-3-4"
+          >
+            <a href="#about-us" class="menu__link menu__links">Про Нас</a>
+            <a href="#contacts" class="menu__link menu__links">Контакти</a>
+          </div>
+
+          <div class="
+            grid__item--mobile-1-2
+            grid__item--desktop-6-7"
+          >
+            <div class="menu__line"></div>
+          </div>
+
+          <div class="
+            grid__item--mobile-1-2
+            grid__item--tablet-4-5
+            grid__item--desktop-8-10"
+          >
+            <h4 class="menu__headline">Графік роботи</h4>
+
+            <div class="menu__info">
+              <div class="menu__info--container">
+                <div class="menu__info menu__info--time">12:00 — 20:00
+                </div>
+
+                <div class="menu__info menu__day--day">середа</div>
+              </div>
+
+              <div class="menu__info--container">
+                <div class="menu__info menu__info--time">12:00 — 20:00</div>
+                <div class="menu__info menu__day--day">четвер</div>
+              </div>
+
+              <div class="menu__info--container">
+                <div class="menu__info menu__info--time">12:00 — 20:00</div>
+                <div class="menu__info menu__day--day">четвер</div>
+              </div>
+
+              <div class="menu__info--container">
+                <div class="menu__info menu__info--time">12:00 — 20:00</div>
+                <div class="menu__info menu__day--day">п’ятниця</div>
+              </div>
+
+              <div class="menu__info--container">
+                <div class="menu__info menu__info--time">11:00 — 19:00</div>
+                <div class="menu__info menu__day--day">субота</div>
+              </div>
+
+              <div class="menu__info--container">
+                <div class="menu__info menu__info--time">11:00 — 19:00</div>
+                <div class="menu__info menu__day--day">неділя</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="
+            grid__item--mobile-1-2
+            grid__item--tablet-5-6
+            grid__item--desktop-11-11"
+          >
+            <div class="menu__info menu__info--additional">
+              <span class="menu__info--bold">Вихідні: </span>понеділок, вівторок <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <div class="overlay"></div>
+
+    <main class="page__main">
+      <div class="page__section events" id="events">
+        <div class="container">
+          <h2 class="page__headline events__headline">Актуальні події</h2>
+
+          <div class="grid">
+            <div class="
+              grid__item--mobile-1-2
+              grid__item--tablet-1-6
+              grid__item--desktop-1-7"
+            >
+              <div class="events__image--container">
+                <img
+                  src="../src/images/events/exhibition-1.png"
+                  alt="exhibition1-image"
+                  class="events__image"
+                >
+              </div>
+            </div>
+
+            <div class="
+              grid__item--mobile-1-2
+              grid__item--tablet-1-6
+              grid__item--desktop-9-12"
+            >
+              <div class="events__info">
+                <div class="events__info--description">виставка</div>
+                <div class="events__info--dates">26.08-29.11.2023</div>
+              </div>
+
+              <h3 class="events__name">Йду і повертаюсь
+              </h3>
+
+              <h4 class="events__description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</h4>
+            </div>
+          </div>
+
+          <div class="grid">
+            <div class="
+              grid__item--mobile-1-2
+              grid__item--tablet-1-6
+              grid__item--desktop-1-7"
+            >
+              <div class="events__image--container">
+                <img
+                  src="../src/images/events/exhibition-2.png"
+                  alt="exhibition2-image"
+                  class="events__image"
+                >
+              </div>
+            </div>
+
+            <div class="
+              grid__item--mobile-1-2
+              grid__item--tablet-1-6
+              grid__item--desktop-9-12"
+            >
+              <div class="events__info">
+                <div class="events__info--description">виставка</div>
+                <div class="events__info--dates">26.08-29.11.2023</div>
+              </div>
+
+              <h3 class="events__name">І спогади і мрії
+              </h3>
+
+              <h4 class="events__description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</h4>
+            </div>
+          </div>
+        </div>
+
+        <div class="events__container--lecture">
+          <img
+            src="../src/images/events/lecture-1.png"
+            alt="lecture1-image"
+            class="events__lecture-image"
+          >
+        </div>
+
+        <div class="container">
+          <div class="events__container--info">
+            <div class="events__info-block">
+              <div class="events__info events__info--lecture">
+                <div class="events__info--description">лекція</div>
+                <div class="events__info--dates">26/08/2022 - 11:00</div>
+              </div>
+
+              <h3 class="events__name--lecture">Від класицизму до романтизму</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="page__section galery" id="galery">
+        <div class="container
+        ">
+          <h2 class="page__headline galery__headline">Галерея</h2>
+        </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+        <script src="scripts/main.js"></script>
+
+        <div class="container swiper-container">
+          <div class="galery__swiper swiper">
+            <div class="galery__swiper-container swiper-wrapper">
+              <div class="galery__slide swiper-slide">
+                <img
+                  src="../src/images/galery/paint-1.png"
+                  alt="paint-1"
+                  class="galery__image image-slider"
+                >
+              </div>
+
+              <div class="galery__slide swiper-slide">
+                <img
+                  src="../src/images/galery/paint-2.png"
+                  alt="paint-1"
+                  class="galery__image image-slider__image"
+                >
+              </div>
+
+              <div class="galery__slide swiper-slide">
+                <img
+                  src="../src/images/galery/paint-3.jpg"
+                  alt="paint-1"
+                  class="galery__image image-slider__image"
+                >
+              </div>
+
+              <div class="galery__slide swiper-slide">
+                <img
+                  src="../src/images/galery/paint-4.jpg"
+                  alt="paint-1"
+                  class="galery__image image-slider__image"
+                >
+              </div>
+            </div>
+
+            <div class="galery__pagination swiper-pagination"></div>
+          </div>
+        </div>
+      </div>
+
+      <div class="galery-grid">
+        <div class="container
+        ">
+          <h2 class="page__headline galery-grid__headline">Галерея</h2>
+
+          <div class="grid">
+            <div class="grid__item--desktop-1-4">
+              <img
+                src="../src/images/galery/grid/paint-1.png"
+                alt="paint-1"
+                class="galery-grid__image--line-1"
+              >
+            </div>
+
+            <div class="grid__item--desktop-5-12">
+              <img
+                src="../src/images/galery/grid/paint-2.png"
+                alt="paint-1"
+                class="galery-grid__image--line-1"
+              >
+            </div>
+          </div>
+
+          <div class="grid">
+            <div class="grid__item--desktop-1-8">
+              <img
+                src="../src/images/galery/grid/paint-3.png"
+                alt="paint-1"
+                class="galery-grid__image--line-2"
+              >
+            </div>
+
+            <div class="grid__item--desktop-9-12">
+              <img
+                src="../src/images/galery/grid/paint-4.png"
+                alt="paint-1"
+                class="galery-grid__image--line-2"
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="page__section subscription">
+        <div class="container">
+          <div class="subscription__info">
+            <h1 class="subscription__headline">Підписка</h1>
+
+            <h2 class="subscription__description">Бути в курсі всіх актуальних подій та останніх новин.</h2>
+          </div>
+
+          <div class="grid">
+            <div class="
+              grid__item--mobile-1-2
+              grid__item--tablet-2-5
+              grid__item--desktop-4-9"
+            >
+              <form
+                action="#"
+                method="post"
+                autocomplete="off"
+                id="form"
+                class="subscription__inform-me"
+              >
+                <label for="email" class="subscription__email--input">
+                  <input
+                    id="email"
+                    name="email"
+                    type="email"
+                    placeholder="E-Mail"
+                    class="subscription__email"
+                    required
+                  >
+                </label>
+
+                <div class="subscription__button">
+                  <a href="#tickets"></a>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="page__section footer">
+        <div class="container">
+          <div class="footer__contact">
+            <div class="logo__container">
+              <a href="#" class="footer__logo logo">
+                    na <br> mu
+              </a>
+            </div>
+
+            <div class="footer__socials">
+              <img
+                  src="../src/images/footer/facebook-logo.png"
+                  alt="facebook-logo"
+                  class="footer__socials--logo"
+              >
+
+              <img
+                src="../src/images/footer/instagram-logo.png"
+                alt="instagram-logo"
+                class="footer__socials--logo"
+              >
+            </div>
+          </div>
+
+          <div class="footer_schedule" id="about-us">
+            <div class="grid">
+              <div class="
+                grid__item--mobile-1-1
+                grid__item--tablet-2-3
+                grid__item--desktop-3-4"
+              >
+                <h4 class="footer__headline">Графік роботи</h4>
+
+                <div class="footer__info">
+                  <div class="footer__info--container">
+                    <p class="footer__info footer__info--time">12:00 — 20:00</p>
+                    <p class="footer__info footer__day--day">середа</p>
+                  </div>
+
+                  <div class="footer__info--container">
+                    <p class="footer__info footer__info--time">12:00 — 20:00</p>
+                    <p class="footer__info footer__day--day">четвер</p>
+                  </div>
+
+                  <div class="footer__info--container">
+                    <p class="footer__info footer__info--time">12:00 — 20:00</p>
+                    <p class="footer__info footer__day--day">четвер</p>
+                  </div>
+
+                  <div class="footer__info--container">
+                    <p class="footer__info footer__info--time">12:00 — 20:00</p>
+                    <p class="footer__info footer__day--day">п’ятниця</p>
+                  </div>
+
+                  <div class="footer__info--container">
+                    <p class="footer__info footer__info--time">11:00 — 19:00</p>
+                    <p class="footer__info footer__day--day">субота</p>
+                  </div>
+
+                  <div class="footer__info--container">
+                    <p class="footer__info footer__info--time">11:00 — 19:00</p>
+                    <p class="footer__info footer__day--day">неділя</p>
+                  </div>
+
+                  <br>
+
+                  <p class="footer__info footer__info--additional">
+                    Вихідні: понеділок, вівторок <br>
+                    Каса припиняє роботу за 1 годину
+                    до закриття музею
+                  </p>
+                </div>
+              </div>
+
+              <div class="grid__item--mobile-2-2 grid__item--tablet-4-5 grid__item--desktop-5-6">
+                <h4 class="footer__headline" id="contacts">Контакти:</h4>
+
+                <p class="footer__info">вул. М. Грушевського, 6; Київ, 01001 <br>
+                  тел. <a class="footer__link" href="tel:+380442781357">+38 (044) 278-13-57</a> <br>
+                  факс +38 (044) 278-74-54 <br>
+                  e-mail:
+                </p>
+
+                <p class="footer__info footer__info--email">
+                  <a class="footer__link" href="mailto:info@namu.kiev.ua">info@namu.kiev.ua</a>
+                </p>
+              </div>
+              <a href="#" class="footer__return-button"></a>
+
+              <div class="
+                grid__item--mobile-1-2
+                grid__item--tablet-2-5
+                grid__item--desktop-7-7"
+              >
+                <div class="footer__line"></div>
+              </div>
+
+              <div class="
+                grid__item--mobile-1-1
+                grid__item--tablet-2-3
+                grid__item--desktop-8-9"
+              >
+                <a href="#galery" class="footer__link footer__links">Галерея</a>
+                <a href="#galery" class="footer__link footer__links">Виставки та події</a>
+              </div>
+
+              <div class="
+                grid__item--mobile-2-2
+                grid__item--tablet-4-4
+                grid__item--desktop-10-10"
+              >
+                <a href="#about-us" class="footer__link footer__links">Про Нас</a>
+                <a href="#contacts" class="footer__link footer__links">Контакти</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
