bug fixes completed

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
 
     <nav class="menu page__menu" id="menu">
       <div class="container">
-        <a href="#" class="menu__cross"></a>
+        <a href="#homepage" class="menu__cross"></a>
 
         <div class="grid">
           <div class="
@@ -66,8 +66,8 @@
             grid__item--tablet-1-1
             grid__item--desktop-1-2"
           >
-            <a href="#galery" class="menu__link menu__links">Галерея</a>
-            <a href="#galery" class="menu__link menu__links">Виставки та події</a>
+            <a href="#galery-grid" class="menu__link menu__links">Галерея</a>
+            <a href="#events" class="menu__link menu__links">Виставки та події</a>
           </div>
 
           <div class="
@@ -75,8 +75,8 @@
             grid__item--tablet-2-2
             grid__item--desktop-3-4"
           >
-            <a href="#about-us" class="menu__link menu__links">Про Нас</a>
-            <a href="#contacts" class="menu__link menu__links">Контакти</a>
+            <a href="#footer" class="menu__link menu__links">Про Нас</a>
+            <a href="#footer" class="menu__link menu__links">Контакти</a>
           </div>
 
           <div class="
@@ -287,44 +287,52 @@
         </div>
       </div>
 
-      <div class="galery-grid">
+      <div class="galery-grid" id="galery-grid">
         <div class="container
         ">
           <h2 class="page__headline galery-grid__headline">Галерея</h2>
 
           <div class="grid">
             <div class="grid__item--desktop-1-4">
-              <img
-                src="../src/images/galery/grid/paint-1.png"
-                alt="paint-1"
-                class="galery-grid__image--line-1"
-              >
+              <div class="galery-grid__image--container--line-1">
+                <img
+                  src="../src/images/galery/grid/paint-1.png"
+                  alt="paint-1"
+                  class="galery-grid__image"
+                >
+              </div>
             </div>
 
             <div class="grid__item--desktop-5-12">
-              <img
-                src="../src/images/galery/grid/paint-2.png"
-                alt="paint-1"
-                class="galery-grid__image--line-1"
-              >
+              <div class="galery-grid__image--container--line-1">
+                <img
+                  src="../src/images/galery/grid/paint-2.png"
+                  alt="paint-1"
+                  class="galery-grid__image"
+                >
+              </div>
             </div>
           </div>
 
           <div class="grid">
             <div class="grid__item--desktop-1-8">
-              <img
-                src="../src/images/galery/grid/paint-3.png"
-                alt="paint-1"
-                class="galery-grid__image--line-2"
-              >
+              <div class="galery-grid__image--container--line-2">
+                <img
+                  src="../src/images/galery/grid/paint-3.png"
+                  alt="paint-1"
+                  class="galery-grid__image"
+                >
+              </div>
             </div>
 
             <div class="grid__item--desktop-9-12">
-              <img
-                src="../src/images/galery/grid/paint-4.png"
-                alt="paint-1"
-                class="galery-grid__image--line-2"
-              >
+              <div class="galery-grid__image--container--line-2">
+                <img
+                  src="../src/images/galery/grid/paint-4.png"
+                  alt="paint-1"
+                  class="galery-grid__image"
+                >
+              </div>
             </div>
           </div>
         </div>
@@ -371,7 +379,7 @@
         </div>
       </div>
 
-      <div class="page__section footer">
+      <div class="page__section footer" id="footer">
         <div class="container">
           <div class="footer__contact">
             <div class="logo__container">
@@ -381,17 +389,21 @@
             </div>
 
             <div class="footer__socials">
-              <img
+              <a href="https://www.facebook.com" class="footer__socials--link">
+                <img
                   src="../src/images/footer/facebook-logo.png"
                   alt="facebook-logo"
                   class="footer__socials--logo"
-              >
+                >
+              </a>
 
-              <img
-                src="../src/images/footer/instagram-logo.png"
-                alt="instagram-logo"
-                class="footer__socials--logo"
-              >
+              <a href="https://www.instagram.com" class="footer__socials--link">
+                <img
+                  src="../src/images/footer/instagram-logo.png"
+                  alt="instagram-logo"
+                  class="footer__socials--logo"
+                >
+              </a>
             </div>
           </div>
 
@@ -408,11 +420,6 @@
                   <div class="footer__info--container">
                     <p class="footer__info footer__info--time">12:00 — 20:00</p>
                     <p class="footer__info footer__day--day">середа</p>
-                  </div>
-
-                  <div class="footer__info--container">
-                    <p class="footer__info footer__info--time">12:00 — 20:00</p>
-                    <p class="footer__info footer__day--day">четвер</p>
                   </div>
 
                   <div class="footer__info--container">
@@ -445,25 +452,27 @@
                 </div>
               </div>
 
-              <div class="grid__item--mobile-2-2 grid__item--tablet-4-5 grid__item--desktop-5-6">
+              <div class="
+                grid__item--mobile-2-2
+                grid__item--tablet-4-5
+                grid__item--desktop-5-6"
+              >
                 <h4 class="footer__headline" id="contacts">Контакти:</h4>
 
-                <p class="footer__info">вул. М. Грушевського, 6; Київ, 01001 <br>
-                  тел. <a class="footer__link" href="tel:+380442781357">+38 (044) 278-13-57</a> <br>
-                  факс +38 (044) 278-74-54 <br>
-                  e-mail:
-                </p>
+                <a href="https://goo.gl/maps/eQjFUUxRMxi1gkqTA"class="footer__info footer__info--contacts footer__link">вул. М. Грушевського, 6; Київ, 01001</a>
+                <br>
+                <a class="footer__link" href="tel:+380442781357">тел. +38 (044) 278-13-57</a> <br>
+                <a class="footer__link" href="tel:+3804427454">факс +38 (044) 278-74-54</a>
 
-                <p class="footer__info footer__info--email">
-                  <a class="footer__link" href="mailto:info@namu.kiev.ua">info@namu.kiev.ua</a>
+                <p class="footer__info footer__info--email footer__info--contacts">
+                  <a class="footer__link" href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
                 </p>
               </div>
               <a href="#" class="footer__return-button"></a>
 
               <div class="
                 grid__item--mobile-1-2
-                grid__item--tablet-2-5
-                grid__item--desktop-7-7"
+                grid__item--tablet-2-5"
               >
                 <div class="footer__line"></div>
               </div>
@@ -473,8 +482,8 @@
                 grid__item--tablet-2-3
                 grid__item--desktop-8-9"
               >
-                <a href="#galery" class="footer__link footer__links">Галерея</a>
-                <a href="#galery" class="footer__link footer__links">Виставки та події</a>
+                <a href="#galery-grid" class="footer__link footer__links">Галерея</a>
+                <a href="#events" class="footer__link footer__links">Виставки та події</a>
               </div>
 
               <div class="
@@ -482,8 +491,8 @@
                 grid__item--tablet-4-4
                 grid__item--desktop-10-10"
               >
-                <a href="#about-us" class="footer__link footer__links">Про Нас</a>
-                <a href="#contacts" class="footer__link footer__links">Контакти</a>
+                <a href="#menu" class="footer__link footer__links">Про Нас</a>
+                <a href="#menu" class="footer__link footer__links">Контакти</a>
               </div>
             </div>
           </div>
