--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>National Art Museum of Ukraine</title>
+    <link rel="icon" type="image/x-icon" href="./images/favicon.png">
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
@@ -370,9 +371,8 @@
                   >
                 </label>
 
-                <div class="subscription__button">
-                  <a href="#tickets"></a>
-                </div>
+                <button type="submit" class="subscription__button">
+                </button>
               </form>
             </div>
           </div>
@@ -389,7 +389,11 @@
             </div>
 
             <div class="footer__socials">
-              <a href="https://www.facebook.com" class="footer__socials--link">
+              <a
+                href="https://www.facebook.com"
+                class="footer__socials--link"
+                target="_blank"
+              >
                 <img
                   src="../src/images/footer/facebook-logo.png"
                   alt="facebook-logo"
@@ -397,7 +401,10 @@
                 >
               </a>
 
-              <a href="https://www.instagram.com" class="footer__socials--link">
+              <a
+                href="https://www.instagram.com" class="footer__socials--link"
+                target="_blank"
+              >
                 <img
                   src="../src/images/footer/instagram-logo.png"
                   alt="instagram-logo"
@@ -459,7 +466,16 @@
               >
                 <h4 class="footer__headline" id="contacts">Контакти:</h4>
 
-                <a href="https://goo.gl/maps/eQjFUUxRMxi1gkqTA"class="footer__info footer__info--contacts footer__link">вул. М. Грушевського, 6; Київ, 01001</a>
+                <a
+                  href="https://goo.gl/maps/eQjFUUxRMxi1gkqTA"
+                  class="
+                    footer__info
+                    footer__info--contacts
+                    footer__link"
+                  target=”_blank”
+                >
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
                 <br>
                 <a class="footer__link" href="tel:+380442781357">тел. +38 (044) 278-13-57</a> <br>
                 <a class="footer__link" href="tel:+3804427454">факс +38 (044) 278-74-54</a>
