--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         </a>
         <div class="nav__links grid--nav-links">
           <a href="#gallery" class="nav__link">Галерея</a>
-          <a href="#subscribe" class="nav__link">Про нас</a>
+          <a href="#subscribe-section" class="nav__link">Про нас</a>
           <a href="#events" class="nav__link">Виставки та події</a>
           <a href="#contacts" class="nav__link">Контакти</a>
         </div>
@@ -295,7 +295,7 @@
         </div>
       </section>
 
-      <section class="page__subscribe subscribe" id="subscribe">
+      <section class="page__subscribe subscribe" id="subscribe-section">
         <div class="subscribe__block">
           <div class="subscribe__title">Підписка</div>
           <div class="subscribe__text">
@@ -306,17 +306,28 @@
             action="#"
             autocomplete="off"
             class="subscribe__form"
+            id="form"
          >
+
+            <label for="email">Email:</label>
+
             <input
               name="email"
               type="email"
+              id="email"
               class="subscribe__input"
               placeholder="E-mail"
-              required>
-            <button class="subscribe__button" type="button">
+              required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+           >
+            <button
+              class="subscribe__button"
+              type="submit"
+              id="subscribe"
+           >
               <img src="./images/button-arrow.svg" alt="button">
             </button>
           </form>
+          <div id="message"></div>
         </div>
       </section>
     </main>
