Museum landing - Fifth commit

--- a/src/index.html
+++ b/src/index.html
@@ -182,8 +182,15 @@
                     <img
                       class="events__image events__image--tab"
                       src="./images/events/eve-tab-01.jpg"
-                      alt="Виставка"
+                      alt="Сергій Васильківський &#699;Кримський берег&#700; 1898р."
                     >
+
+                    <div class="
+                      events__image-definition
+                      events__image-definition--bottom
+                    ">
+                      Сергій Васильківський &#699;Кримський берег&#700; 1898р.
+                    </div>
                   </div>
                 </div>
                 
@@ -231,8 +238,15 @@
                     <img
                       class="events__image"
                       src="./images/events/eve-tab-02.jpg"
-                      alt="Виставка"
+                      alt="Петро Холодний &#699;Казка про дівчину і павича&#700; 1915р."
                     >
+
+                    <div class="
+                      events__image-definition
+                      events__image-definition--bottom
+                    ">
+                      Петро Холодний &#699;Казка про дівчину і павича&#700; 1915р.
+                    </div>
                   </div>
                 </div>
 
@@ -272,8 +286,15 @@
                 <img
                   class="lesson__photo"
                   src="./images/events/eve-tab-03.jpg"
-                  alt="Лекція"
+                  alt="Сергій Васильківський &#699;Закат над озером&#700; 1900р."
                 >
+
+                <div class="
+                  lesson__photo-definition
+                  lesson__photo-definition--top
+                ">
+                  Сергій Васильківський &#699;Закат над озером&#700; 1900р.
+                </div>
               </div>
 
               <div class="lesson__information">
@@ -310,8 +331,15 @@
                     <img
                       class="swiper__img"
                       src="./images/gallery/pic-01-mob.jpg"
-                      alt="Картина"
+                      alt="Федір Кричевський &#699;Наречена&#700; 1910р."
                     >
+
+                    <div class="
+                      swiper__img-definition
+                      swiper__img-definition--bottom
+                    ">
+                      Федір Кричевський &#699;Наречена&#700; 1910р.
+                    </div>
                   </div>
                 </div>
 
@@ -320,8 +348,15 @@
                     <img
                       class="swiper__img"
                       src="./images/gallery/pic-02.jpg"
-                      alt="Картина"
+                      alt="Кіріак Костанді &#699;Гуси&#700; 1913р."
                     >
+
+                    <div class="
+                      swiper__img-definition
+                      swiper__img-definition--bottom
+                    ">
+                      Кіріак Костанді &#699;Гуси&#700; 1913р.
+                    </div>
                   </div>
                 </div>
 
@@ -330,8 +365,15 @@
                     <img
                       class="swiper__img"
                       src="./images/gallery/pic-03.jpg"
-                      alt="Картина"
+                      alt="Петро Левченко &#699;Глухомань&#700; 1903р."
                     >
+
+                    <div class="
+                      swiper__img-definition
+                      swiper__img-definition--bottom
+                    ">
+                      Петро Левченко &#699;Глухомань&#700; 1903р.
+                    </div>
                   </div>
                 </div>
 
@@ -340,8 +382,15 @@
                     <img
                       class="swiper__img"
                       src="./images/gallery/pic-05.jpg"
-                      alt="Картина"
+                      alt="Микола Глущенко &#699;На морі&#700; 1970р."
                     >
+
+                    <div class="
+                      swiper__img-definition
+                      swiper__img-definition--bottom
+                    ">
+                      Микола Глущенко &#699;На морі&#700; 1970р.
+                    </div>
                   </div>
                 </div>
               </div>
@@ -360,8 +409,15 @@
                   <img
                     class="gallery__painting"
                     src="./images/gallery/pic-01.jpg"
-                    alt="Картина"
+                    alt="Федір Кричевський &#699;Наречена&#700; 1910р."
                   >
+
+                  <div class="
+                    gallery__painting-definition
+                    gallery__painting-definition--bottom
+                  ">
+                    Федір Кричевський &#699;Наречена&#700; 1910р.
+                  </div>
                 </div>
               </div>
 
@@ -373,8 +429,15 @@
                   <img
                     class="gallery__painting"
                     src="./images/gallery/pic-03.jpg"
-                    alt="Картина"
+                    alt="Петро Левченко &#699;Глухомань&#700; 1903р."
                   >
+
+                  <div class="
+                    gallery__painting-definition
+                    gallery__painting-definition--bottom
+                  ">
+                    Петро Левченко &#699;Глухомань&#700; 1903р.
+                  </div>
                 </div>
               </div>
 
@@ -386,8 +449,15 @@
                   <img
                     class="gallery__painting"
                     src="./images/gallery/pic-04.jpg"
-                    alt="Картина"
+                    alt="Киріак Костанді &#699;Сонячний день&#700; 1906р."
                   >
+
+                  <div class="
+                    gallery__painting-definition
+                    gallery__painting-definition--bottom
+                  ">
+                    Киріак Костанді &#699;Сонячний день&#700; 1906р.
+                  </div>
                 </div>
               </div>
 
@@ -399,8 +469,15 @@
                   <img
                     class="gallery__painting"
                     src="./images/gallery/pic-05.jpg"
-                    alt="Картина"
+                    alt="Микола Глущенко &#699;На морі&#700; 1970р."
                   >
+
+                  <div class="
+                    gallery__painting-definition
+                    gallery__painting-definition--bottom
+                  ">
+                    Микола Глущенко &#699;На морі&#700; 1970р.
+                  </div>
                 </div>
               </div>
             </div>
