--- a/src/index.html
+++ b/src/index.html
@@ -432,21 +432,24 @@
           Бути в курсі всіх актуальних подій та останніх новин.
         </p>
 
-        <div class="form-field">
+        <form action="#" class="form-field">
           <input
             type="text"
             class="form-field__email"
             placeholder="E-mail"
             required
           >
-          <a href="#"
+          <button
             class="form-field__submit
             form-field__submit--margin-left"
             value="Submit"
           >
-            <img src="./images/arrow-button.svg" alt="arrow">
-          </a>
-        </div>
+            <img
+              class="form-field__img"
+              src="./images/arrow-button.svg"
+              alt="arrow">
+          </button>
+        </form>
       </div>
     </div>
 
