--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,9 @@
                 menu--for-bg">
               </a>
 
-              <a href="#" class="logo">
+              <a href="#" class="logo logo--margin-left">
                 <img
-                class="logo__img logo__img--margin-left"
+                class="logo__img"
                 src="./images/namu-logo.svg"
                 alt="NAMU-logo"
               >
@@ -409,7 +409,7 @@
             </div>
           </div>
 
-          <div class="slider__dots">
+          <div class="slider__dots slider__dots--margin-top">
             <div class="slider__dot"></div>
             <div class="slider__dot"></div>
             <div class="slider__dot"></div>
@@ -434,7 +434,7 @@
 
         <form action="#" class="form-field">
           <input
-            type="text"
+            type="email"
             class="form-field__email"
             placeholder="E-mail"
             required
@@ -685,7 +685,7 @@
           grid__item--tablet-1-6
           grid__item--desktop-1-12"
         >
-          <div class="author">
+          <div class="author author--margins">
             <p class="author__name">
               Designed by Zhyriada Marina
             </p>
