--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,122 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Museum</title>
+    <link rel="icon"
+      href="./images/signs/favicon/favicon-32x32.png"
+      type="image/National Museum"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <script src="./scripts/main.js" defer></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header" id="home">
+      <div class="header__top-nav">
+        <div class="header__top-nav__museum">
+        </div>
+        <div class="header__top-nav__container grid grid--desktop grid--tablet">
+          <a
+            href="#menu"
+            class="header__top-nav__link grid__item--desktop-1-2 "
+            title="menu">
+            <img
+              src="./images/signs/menu.svg"
+              alt="menu"
+              class="header__top-nav__menu-image">
+          </a>
+          <a
+            href="#"
+            class="header__top-nav__logo grid__item--desktop-6-8 grid__item--tablet-5-6"
+            title="logo">
+            <img
+              src="./images/signs/NAMU.svg"
+              alt="logo"
+              class="header__top-nav__NAMU">
+          </a>
+        </div>
+        <div class="header__top-nav__name header__top-nav__name--h grid grid--desktop grid--tablet">
+          <h1 class="header__top-nav__name__item">ХУДОЖНІЙ </h1>
+        </div>
+        <div class="header__top-nav__name header__top-nav__name--m grid grid--desktop grid--tablet">
+          <h1 class="header__top-nav__name__item">МУЗЕЙ</h1>
+        </div>
+        <div class="header__top-nav__tickets">
+          <div class="header__top-nav__tickets__item">
+            КВИТКИ
+          </div>
+          <a href="#gallery" title="gallery">
+            <p class="header__top-nav__tickets__right"></p>
+          </a>
+        </div>
+        <a
+          href="#events"
+          title="events"
+          class="header__top-nav__act">
+          <p class="header__top-nav__act__actions">ПОДІЇ</p>
+        </a>
+      </div>
+
+      <nav class="menu menu__page" id="menu">
+        <div class="menu__container">
+          <div class="menu__cross">
+            <a href="#" class="menu__cross__item">
+            </a>
+          </div>
+          <div class="menu__list">
+            <ul class="menu__list__container">
+              <div class="menu__list__left">
+                <li class="menu__item">
+                  <a href="#gallery" class="menu__link">Галерея</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#events" class="menu__link">Виставки та<br> події</a>
+                </li>
+              </div>
+
+              <div class="menu__list__rigth">
+                <li class="menu__item">
+                  <a href="#about-us" class="menu__link">Про Нас</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#contacts" class="menu__link">Контакти</a>
+                </li>
+              </div>
+            </ul>
+
+            <div class="menu__stick">
+              <div class="menu__stick__item">
+              </div>
+            </div>
+
+            <div class="menu__block">
+              <div class="menu__block__container">
+                <div class="menu__block__schedule">Графік роботи</div>
+                <div class="menu__block__time">
+                  <div class="menu__block__time__items">12:00 — 20:00 середа<br>
+                    12:00 — 20:00 четвер<br>
+                    12:00 — 20:00 п’ятниця<br>
+                    11:00 — 19:00 субота<br>
+                    11:00 — 19:00 неділя
+                  </div>
+                </div>
+              </div>
+              <div class="menu__block__days">Вихідні: понеділок, вівторок<br>
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </div>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
+
   </body>
 </html>
