--- a/src/index.html
+++ b/src/index.html
@@ -70,47 +70,50 @@
             <a href="#" class="menu__cross__item">
             </a>
           </div>
-          <div class="menu__list">
-            <ul class="menu__list__container">
-              <div class="menu__list__left">
-                <li class="menu__item">
-                  <a href="#gallery" class="menu__link">Галерея</a>
-                </li>
-                <li class="menu__item">
-                  <a href="#events" class="menu__link">Виставки та<br> події</a>
-                </li>
-              </div>
+          <div class="menu__center">
+            <div class="menu__list">
+              <ul class="menu__list__block">
+                <div class="menu__list__left">
+                  <li class="menu__item">
+                    <a href="#gallery" class="menu__link">Галерея</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="#events" class="menu__link">Виставки та<br> події</a>
+                  </li>
+                </div>
 
-              <div class="menu__list__rigth">
-                <li class="menu__item">
-                  <a href="#about-us" class="menu__link">Про Нас</a>
-                </li>
-                <li class="menu__item">
-                  <a href="#contacts" class="menu__link">Контакти</a>
-                </li>
-              </div>
-            </ul>
+                <div class="menu__list__right">
+                  <li class="menu__item">
+                    <a href="#about-us" class="menu__link">Про Нас</a>
+                  </li>
+                  <li class="menu__item">
+                    <a href="#contacts" class="menu__link">Контакти</a>
+                  </li>
+                </div>
+              </ul>
 
-            <div class="menu__stick">
-              <div class="menu__stick__item">
-              </div>
-            </div>
 
-            <div class="menu__block">
-              <div class="menu__block__container">
-                <div class="menu__block__schedule">Графік роботи</div>
-                <div class="menu__block__time">
-                  <div class="menu__block__time__items">12:00 — 20:00 середа<br>
-                    12:00 — 20:00 четвер<br>
-                    12:00 — 20:00 п’ятниця<br>
-                    11:00 — 19:00 субота<br>
-                    11:00 — 19:00 неділя
+
+              <div class="menu__block">
+                <div class="menu__stick">
+                  <div class="menu__stick__item">
                   </div>
                 </div>
-              </div>
-              <div class="menu__block__days">Вихідні: понеділок, вівторок<br>
-                Каса припиняє роботу за 1 годину
-                до закриття музею
+                <div class="menu__block__container">
+                  <div class="menu__block__schedule">Графік роботи</div>
+                  <div class="menu__block__time">
+                    <div class="menu__block__time__items">12:00 — 20:00 середа<br>
+                      12:00 — 20:00 четвер<br>
+                      12:00 — 20:00 п’ятниця<br>
+                      11:00 — 19:00 субота<br>
+                      11:00 — 19:00 неділя
+                    </div>
+                  </div>
+                </div>
+                <div class="menu__block__days">Вихідні: понеділок, вівторок<br>
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </div>
               </div>
             </div>
           </div>
